src/objects/BillClassBean__mdt.object
<CustomObject>
    <fields>
        <fullName>BillClassType__c</fullName>
        <label>BillClassType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillClass__c</fullName>
        <label>BillClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BillClassBean</label>
    <pluralLabel>BillClassBean</pluralLabel>
</CustomObject>